<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="total_expense">Calculate Total Expense</string>
    <string name="expenses">Expenses</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="filter">Filter</string>
    <string name="update">UPDATE</string>
    <string name="add">ADD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_exp">Calculate Category Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="add_edit_label">{action}</string>
    <string name="clear_filter">Clear All</string>
    <string name="empty_title_msg">Title cannot be empty</string>
    <string name="empty_amount_msg">Amount cannot be empty</string>
    <string name="exceed_amount_msg">Amount Exceeding the limit</string>
    <string name="empty_category_msg">Category cannot be empty</string>
    <string name="space_category_msg">There can\'t be multiple Categories</string>
    <string name="empty_date_msg">Date cannot be empty</string>
    <string name="expense_amount">₹ %d</string>
    <string name="expense_title">%s</string>
    <string name="expense_category">%s</string>
    <string name="expense_date">%s</string>
    <string name="expense_title_hint">Expense Title</string>
    <string name="expense_amount_hint">Amount</string>
    <string name="expense_category_hint">Category</string>
    <string name="expense_date_month_hint">Month</string>
    <string name="expense_date_date_hint">Date</string>
    <string name="expense_date_year_hint">Year</string>I
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="entertainment">Entertainment</string>
    <string name="grocery">Grocery</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="shopping">Shopping</string>
    <string name="no_items_found">No Expenses Found</string>
    <string name="total_expense_is">Total Expense is %s</string>
    <string name="empty_list">No Expense Found</string>
    <string name="no_filter_applied">No Filter Applied</string>
    <string name="expense_for">Expense for %s is %s</string>
    <string name="make_graph">Category wise Expense</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="graph_fragment">Category wise Expense</string>
    <string name="pie_chart_text">Spent ₹%d for %s \n accounting for %.2f%% of Total Expense</string>
    <string name="expenses_and_category_nl">Expenses and \n Category</string>
    <string name="expenses_and_category">Expenses and Category</string>
    <string name="clear_date_range">Clear Date Range</string>
    <string name="choose_date_range">Choose Date Range</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="expense_order">Expense Order</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date_newest_first">Sort by Date (Newest first)</string>
    <string name="sort_by_date_oldest_first">Sort by Date (Oldest first)</string>
    <string name="expense_amount_greater_first">Expense Amount (Greater first)</string>
    <string name="expense_amount_lowest_first">Expense Amount (Lowest first)</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="sort_and_filter">Sort &amp; Filter</string>
</resources>